--- a/00_core.ipynb
+++ b/00_core.ipynb
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# module name here\n",
+    "# testing43\n",
     "\n",
     "> API details."
    ]
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#hide\n",
+    "# hide\n",
     "from nbdev.showdoc import *"
    ]
   },
@@ -33,7 +33,29 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# export\n",
+    "import numpy as np\n",
+    "\n",
+    "from dataclasses import dataclass\n",
+    "from typing import List\n",
+    "\n",
+    "\n",
+    "@dataclass\n",
+    "class Instance:\n",
+    "    \"\"\"An Instance is a sample from a dataset.\"\"\"\n",
+    "\n",
+    "    text: str\n",
+    "    tokens: List[str] = None\n",
+    "    vectors: np.ndarray = None\n",
+    "    embedding: np.ndarray = None\n",
+    "\n",
+    "    def __repr__(self):\n",
+    "        if self.tokens:\n",
+    "            return f\"{' '.join(self.tokens[:25])}\"\n",
+    "        else:\n",
+    "            return self.text[:25]"
+   ]
   }
  ],
  "metadata": {
@@ -44,5 +66,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
